# card_game

./: README.md  main.py  pyproject.toml
entities/: deck.py  hand.py  play_resolver.py
entities/card_containers/: card_container.py  discard_pile.py  hand.py  table.py
entities/cards/: card.py  number_card.py
entities/playable_hands/: four_of_a_kind.py  pair.py  playable_hand.py  three_of_a_kind.py
entities/ranks/: face_rank.py  jack.py  king.py  number_rank.py  queen.py  rank.py
entities/suits/: clubs.py  diamonds.py  hearts.py  spades.py  suit.py
